--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
+email: giorgos.zapata@gmail.com
+url: https://github.com/Kyziridis
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+keywords: "Python, GoLang, R, AWS, GCP, Azure"
+skills: "AI Engineer - Data Engineer - Python Software Engineer"
+meta_author: George Kyziridis
 
 # Google webmaster tools
 google_verify:
